--- a/style.css
+++ b/style.css
@@ -1,66 +1,83 @@
 * {
-    margin: 0; 
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Rubik", sans-serif;
-    -webik-font-smoothing: antialiased;
+    -webkit-font-smoothing: antialiased;
 }
 
-:root {
+:root{
     --bg-color: #f4f6fa;
     --purple: #a729f5;
     --primary-text-color: #313e51;
-    --bg-mobile: url(./assents/images/pattern-backgrund-mobile-light.svg);
+    --secundary-text-color: #626c7f;
+    --white: #fff;
+    --bg-mobile: url(./assets/images/pattern-background-mobile-light.svg);
 }
 
-body{
+body {
     height: 100svh;
     background: var(--bg-mobile) var(--bg-color);
-    background-repeat: no-repeat ;
+    background-repeat: no-repeat;
     background-size: cover;
 }
 
 header{
-    border: 1px ;
-
     padding: 16px 24px;
     display: flex;
     justify-content: flex-end;
 }
 
-.tema{
-    border: 1px solid blue;
+.tema {
     padding: 8px 0;
     display: flex;
     align-items: center;
     gap: 8px;
 }
-
-.tema img{
+.tema img {
     width: 16px;
 }
 
-.tema button{
+.tema button {
     height: 20px;
     width: 32px;
-   background: var(--purple);
-   border: 0;
-   border-radius: 999px;
-   padding: 4px;
+    background: #a729f5;
+    border: 0;
+    border-radius: 999px;
+    padding: 4px;
 }
 
-.tema button div{
-background:var(--bg-color) ;
-width: 12px;
-height: 12px;
+.tema button div {
+    background: var(--bg-color);
+    width: 12px;
+    height: 12px;
 border-radius: 999px;
 }
 
-main{
-    padding: 32px 24px;
+main {
+    padding: 12px 24px;
 }
-main h1{
+
+.boas_vindas{
+    margin-bottom: 40px;
+}
+
+.boas_vindas h1 {
     font-size: 48px;
-    font-weight:300;
+    font-weight: 300;
     color: var(--primary-text-color);
+    margin-bottom: 16px;
 }
+
+.boas_vindas strong {
+    font-weight: 500;
+}
+
+.boas_vindas p {
+     color: var(--secundary-text-color);
+     font-size: 14px;
+     line-height: 150%;
+     font-style: italic;
+}
+
+
