--- a/style.css
+++ b/style.css
@@ -147,7 +147,22 @@ header {
 }
 
 .tema img {
-    
+    width: 24px;
+}
+
+.tema {
+    gap: 16px;
+}
+
+
+.tema button {
+    width: 48px;
+    height: 28px;
+}
+
+.tema button div{
+    width: 20px;
+    height: 20px;
 }
 
 main {
