--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -18,6 +18,8 @@
     --bg-javascript: #ebf0ff;
     --bg-acessibilidade: #f6e7ff;
     --white: #fff;
+    --green: #27d782;
+    --red: #ee5454;
     --bg-mobile: url(../../assets/images/pattern-background-mobile-light.svg);
     --bg-desktop: url(../../assets/images/pattern-background-desktop-light.svg);
 }
@@ -162,8 +164,13 @@ main {
 }
 
 
-.alternativas label:has(input:checked) {
+.alternativas label:has(input:checked){
+    outline: 3px solid var(--purple);
     
+    & span {
+        background: var(--purple);
+        color: var(--white);
+    }
 }
 
 .alternativas input {
