--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ header {
     padding: 16px 24px;
     display: flex;
     justify-content: flex-end;
+    max-width: 1160;
+    margin-inline: auto;
 }
 
 .tema {
