--- a/pages/resultados/resultado.css
+++ b/pages/resultados/resultado.css
@@ -14,7 +14,7 @@
     --purple-hover: rgba(167, 41, 245, 0.7);
     --primary-text-color: #313e51;
     --secundary-text-color: #626c7f;
-    --button-bg: #fff;
+    --pontuacao-bg: #fff;
     --shadow: 0px 16px 40px 0px rgba(143, 169, 193, 0, 14);
     --bg-html: #fff1e9;
     --bg-css: #e0fdef;
@@ -35,7 +35,7 @@ body.escuro {
     --bg-desktop: url(../../assets/images/pattern-background-desktop-dark.svg);
     --primary-text-color: #fff;
     --secondary-text-color: #abc1e1;
-    --button-bg: #3b4d66;
+    --pontuacao-bg: #3b4d66;
     --shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
 }
 
@@ -102,8 +102,49 @@ border-radius: 5px;
     background: var(--bg-color);
     width: 12px;
     height: 12px;
-border-radius: 999px;
+    border-radius: 999px;
 }
+
+main{
+    padding: 32px 24px;
+}
+
+main h2{
+    font-size: 40px;
+    font-weight: 300;
+    color: var(--primary-text-color);
+    margin-bottom: 40px;
+}
+
+
+main h2 strong{
+    font-weight: 500;
+
+}
+
+
+.pontuação {
+background: var(--pontuacao-bg);
+padding: 32px;
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 16px;
+border-radius: 12px;
+margin-bottom: 12px;
+}
+
+.pontuação strong{
+    font-size: 88px;
+    color: var(--primary-text-color);
+    font-weight: 500;
+}
+
+.pontuação p{
+    color: var(--secondary-text-color);
+    font-size: 18px;
+}
+
 
 @media(min-width: 1100px) {
     body {
