--- a/pages/resultados/resultado.css
+++ b/pages/resultados/resultado.css
@@ -98,18 +98,20 @@ border-radius: 5px;
     padding: 4px;
 }
 
+
 .tema button div {
-    background: var(--bg-color);
+    background: var(--white);
     width: 12px;
     height: 12px;
     border-radius: 999px;
 }
 
-main{
+
+main {
     padding: 32px 24px;
 }
 
-main h2{
+main h2 {
     font-size: 40px;
     font-weight: 300;
     color: var(--primary-text-color);
@@ -119,31 +121,48 @@ main h2{
 
 main h2 strong{
     font-weight: 500;
-
 }
-
 
 .pontuação {
-background: var(--pontuacao-bg);
-padding: 32px;
-display: flex;
-flex-direction: column;
-align-items: center;
-gap: 16px;
-border-radius: 12px;
-margin-bottom: 12px;
-}
+    background: var(--pontuacao-bg);
+    padding: 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    border-radius: 12px;
+    margin-bottom: 12px;
+    }
 
-.pontuação strong{
-    font-size: 88px;
-    color: var(--primary-text-color);
-    font-weight: 500;
-}
+    .pontuação strong{
+        font-size: 88px;
+        color: var(--primary-text-color);
+        font-weight: 500;
+    }
 
-.pontuação p{
-    color: var(--secondary-text-color);
+
+    .pontuação p{
+        color: var(--secondary-text-color);
+        font-size: 18px;
+    }
+
+
+    main button {
+    padding: 16px;
+    border-radius: 12px;
+    border: none;
+    background: var(--purple);
+    color: var(--white);
+    width: 100%;
     font-size: 18px;
-}
+    font-weight: 500;
+    transition: backgroud 0.3s;
+    }
+
+    main button:hover {
+        background: var(--purple-hover);
+        cursor: pointer;''
+    }
 
 
 @media(min-width: 1100px) {
