--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -99,10 +99,10 @@ border-radius: 5px;
 }
 
 .tema button div {
-    background: var(--bg-color);
+    background: var(--white);
     width: 12px;
     height: 12px;
-border-radius: 999px;
+    border-radius: 999px;
 }
 
 
