--- a/pages/resultados/resultado.css
+++ b/pages/resultados/resultado.css
@@ -52,6 +52,7 @@ header{
     padding: 16px 24px;
 }
 
+
 .assunto {
     display: flex;
     align-items: center;
@@ -106,7 +107,6 @@ border-radius: 5px;
     border-radius: 999px;
 }
 
-
 main {
     padding: 32px 24px;
 }
@@ -119,7 +119,7 @@ main h2 {
 }
 
 
-main h2 strong{
+main h2 strong {
     font-weight: 500;
 }
 
@@ -156,12 +156,12 @@ main h2 strong{
     width: 100%;
     font-size: 18px;
     font-weight: 500;
-    transition: backgroud 0.3s;
+    transition: background 0.3s;
     }
 
     main button:hover {
         background: var(--purple-hover);
-        cursor: pointer;''
+        cursor: pointer;
     }
 
 
@@ -209,3 +209,20 @@ main h2 strong{
         width: 20px;
         height: 20px;
     }
+
+   main {
+    display: flex;
+    gap: 140px;
+    max-width: 1160px;
+    margin-inline: auto;
+   }
+
+
+   main h2,
+   main > div {
+    width: 100%;
+   }
+
+   main h2 {
+    font-size: 66px;
+   }
