--- a/pages/resultados/resultado.css
+++ b/pages/resultados/resultado.css
@@ -226,3 +226,23 @@ main h2 strong {
    main h2 {
     font-size: 66px;
    }
+
+.pontuação{
+    border-radius: 24px;
+    margin-bottom: 32px;
+}
+
+
+   .pontuação strong{
+    font-size: 144px;
+   }
+
+   .pontuação p{
+    font-size: 24px;
+   }
+
+   main button{
+    font-size: 22px;
+    padding: 24px;
+    border-radius: 24px;
+   }
