--- a/style.css
+++ b/style.css
@@ -66,13 +66,15 @@ header {
     border: 0;
     border-radius: 999px;
     padding: 4px;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .tema button div {
-    background: var(--bg-color);
+    background: var(--white);
     width: 12px;
     height: 12px;
-border-radius: 999px;
+    border-radius: 999px;
 }
 
 main {
