--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -96,6 +96,8 @@ border-radius: 5px;
     border: 0;
     border-radius: 999px;
     padding: 4px;
+    display: flex;
+    cursor: pointer;
 }
 
 .tema button div {
