--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -6,13 +6,13 @@
     -webkit-font-smoothing: antialiased;
 }
 
-:root{
+:root {
     --bg-color: #f4f6fa;
     --purple: #a729f5;
     --primary-text-color: #313e51;
     --secundary-text-color: #626c7f;
     --button-bg: #fff;
-    --shadow: 0px 16px 40px 0px rgba(143, 169, 193, 0, 14);
+    --shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
     --bg-html: #fff1e9;
     --bg-css: #e0fdef;
     --bg-javascript: #ebf0ff;
@@ -22,19 +22,17 @@
     --bg-desktop: url(./assets/images/pattern-background-desktop-light.svg);
 }
 
-
 body.escuro {
     --bg-color: #313e51;
     --bg-mobile: url(./assets/images/pattern-background-mobile-dark.svg);
     --bg-desktop: url(./assets/images/pattern-background-desktop-dark.svg);
     --primary-text-color: #fff;
-    --secondary-text-color: #abc1e1;
+    --secundary-text-color: #abc1e1;
     --button-bg: #3b4d66;
     --shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
 }
 
-
-body {
+body{
     height: 100svh;
     background: var(--bg-mobile) var(--bg-color);
     background-repeat: no-repeat;
@@ -45,7 +43,7 @@ header {
     padding: 16px 24px;
     display: flex;
     justify-content: flex-end;
-    max-width: 1160;
+    max-width: 1160px;
     margin-inline: auto;
 }
 
@@ -55,23 +53,23 @@ header {
     align-items: center;
     gap: 8px;
 }
-.tema img {
+
+.tema img{
     width: 16px;
 }
 
 .tema button {
     height: 20px;
     width: 32px;
-    background: #a729f5;
+    background: var(--purple);
     border: 0;
     border-radius: 999px;
     padding: 4px;
     display: flex;
-    justify-content: flex-end;
     cursor: pointer;
 }
 
-.tema button div {
+.tema button div{
     background: var(--white);
     width: 12px;
     height: 12px;
@@ -79,35 +77,36 @@ header {
 }
 
 main {
-    padding: 12px 24px;
+    padding: 32px 24px;
 }
 
-.boas_vindas{
+.boas_vindas {
     margin-bottom: 40px;
 }
 
-.boas_vindas h1 {
-    font-size: 48px;
+.boas_vindas h1{
+    font-size: 40px;
     font-weight: 300;
     color: var(--primary-text-color);
     margin-bottom: 16px;
 }
 
-.boas_vindas strong {
+.boas_vindas h1 strong {
     font-weight: 500;
+
 }
 
-.boas_vindas p {
-     color: var(--secundary-text-color);
-     font-size: 14px;
-     line-height: 150%;
-     font-style: italic;
+.boas_vindas p{
+    color: var(--secundary-text-color);
+    font-size: 14px;
+    line-height: 150%;
+    font-style: italic;
 }
 
 .assuntos {
-   display: flex;
-   flex-direction: column;
-   gap: 17px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
 }
 
 .assuntos button {
@@ -125,25 +124,23 @@ main {
     cursor: pointer;
 }
 
-
-
-.botao_html div {
-    background: var(--bg-html);
-}
-
-.assuntos button div {
+.assuntos button div{
     width: 40px;
     height: 40px;
     padding: 5px;
     border-radius: 5px;
 }
 
-.assuntos button img{
+.assuntos button img {
     width: 100%;
 }
 
+.botao_html div {
+    background:var(--bg-html) ;
+}
+
 .botao_css div {
-     background: var(--bg-css);
+    background: var(--bg-css);
 }
 
 .botao_javascript div {
@@ -155,71 +152,67 @@ main {
 }
 
 @media(min-width: 1100px) {
-    body{
+    body {
         background: var(--bg-desktop) var(--bg-color);
         background-size: cover;
-       background-repeat: no-repeat;
+        background-repeat: no-repeat;
     }
-}
 
-header {
-    margin-block: 81px ;
-    max-width: 1160px;
-    margin-inline: auto;
-}
+    header{
+        margin-block: 81px;
 
-.tema img {
-    width: 24px;
-}
+    }
 
-.tema {
-    gap: 16px;
-}
+    .tema {
+        gap: 16px;
+    }
 
+    .tema img {
+        width: 24px;
+    }
 
-.tema button {
-    width: 48px;
-    height: 28px;
-}
+    .tema button {
+        width: 48px;
+        height: 28px;
+    }
 
-.tema button div{
-    width: 20px;
-    height: 20px;
-}
+    .tema button div {
+        width: 20px;
+        height: 20px;
+    }
 
-main {
-    display: flex;
-    max-width: 1160px;
-    margin-inline: auto;
-}
+    main {
+        display: flex;
+        max-width: 1160px;
+        margin-inline: auto;
+    }
 
-section {
-    width: 100%;
-}
+    section {
+        width: 100%;
+    }
 
-.boas_vindas h1 {
-    font-size: 64px;
-    margin-bottom: 48px;
-}
+    .boas_vindas h1 {
+        font-size: 64px;
+        margin-bottom: 48px;
+    }
 
-.boas_vindas p {
-    font-size: 20px;
-}
+    .boas_vindas p {
+        font-size: 20px;
+    }
 
-.assuntos {
-    gap: 24px;
-}
+    .assuntos {
+        gap: 24px;
+    }
 
-.assuntos button {
-    font-size: 28px;
-    padding: 20px;
-    gap: 32px;
-}
+    .assuntos button {
+        font-size: 28px;
+        padding: 20px;
+        gap: 32px;
+    }
 
     .assuntos button div {
         width: 56px;
         height: 56px;
         padding: 8px;
     }
-
-
+}
