--- a/pages/resultado/resultado.css
+++ b/pages/resultado/resultado.css
@@ -1,4 +1,4 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -6,7 +6,7 @@
     -webkit-font-smoothing: antialiased;
 }
 
-:root{
+:root {
     --bg-color: #f4f6fa;
     --bg-span: #f4f6fa;
     --color-span: #626c7f;
@@ -15,7 +15,7 @@
     --primary-text-color: #313e51;
     --secundary-text-color: #626c7f;
     --pontuacao-bg: #fff;
-    --shadow: 0px 16px 40px 0px rgba(143, 169, 193, 0, 14);
+    --shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
     --bg-html: #fff1e9;
     --bg-css: #e0fdef;
     --bg-javascript: #ebf0ff;
@@ -25,19 +25,18 @@
     --bg-desktop: url(../../assets/images/pattern-background-desktop-light.svg);
 }
 
-
 body.escuro {
     --bg-color: #313e51;
-    --body-escuro: #313e51;
+    --color-span: #313e51;
     --bg-mobile: url(../../assets/images/pattern-background-mobile-dark.svg);
     --bg-desktop: url(../../assets/images/pattern-background-desktop-dark.svg);
     --primary-text-color: #fff;
-    --secondary-text-color: #abc1e1;
+    --secundary-text-color: #abc1e1;
     --pontuacao-bg: #3b4d66;
     --shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
 }
 
-body {
+body{
     height: 100svh;
     background: var(--bg-mobile) var(--bg-color);
     background-repeat: no-repeat;
@@ -50,20 +49,34 @@ header{
     padding: 16px 24px;
 }
 
-
-.assunto {
+.assunto{
     display: flex;
     align-items: center;
     gap: 16px;
 }
 
+.assunto_icone{
+    background: var(--bg-acessibilidade);
+    width: 40px;
+    height: 40px;
+    padding: 5px;
+    border-radius: 5px;
+}
 
-.assunto_icone {
-background: var(--bg-acessibilidade);
-width: 40px;
-height: 40px;
-padding: 5px;
-border-radius: 5px;
+.assunto_icone.html {
+    background: var(--bg-html);
+}
+
+.assunto_icone.css {
+    background: var(--bg-css);
+}
+
+.assunto_icone.javascript {
+    background: var(--bg-javascript);
+}
+
+.assunto_icone.acessibilidade {
+    background: var(--bg-acessibilidade);
 }
 
 .assunto_icone img {
@@ -76,7 +89,6 @@ border-radius: 5px;
     color: var(--primary-text-color);
 }
 
-
 .tema {
     padding: 8px 0;
     display: flex;
@@ -84,14 +96,14 @@ border-radius: 5px;
     gap: 8px;
 }
 
-.tema img {
+.tema img{
     width: 16px;
 }
 
 .tema button {
     height: 20px;
     width: 32px;
-    background: #a729f5;
+    background: var(--purple);
     border: 0;
     border-radius: 999px;
     padding: 4px;
@@ -99,8 +111,7 @@ border-radius: 5px;
     cursor: pointer;
 }
 
-
-.tema button div {
+.tema button div{
     background: var(--white);
     width: 12px;
     height: 12px;
@@ -118,12 +129,11 @@ main h2 {
     margin-bottom: 40px;
 }
 
-
-main h2 strong {
+main h2 strong{
     font-weight: 500;
 }
 
-.pontuação {
+.pontuacao {
     background: var(--pontuacao-bg);
     padding: 32px;
     display: flex;
@@ -133,42 +143,40 @@ main h2 strong {
     border-radius: 12px;
     margin-bottom: 12px;
     box-shadow: var(--shadow);
-    }
+}
 
-    .pontuação strong{
-        font-size: 88px;
-        color: var(--primary-text-color);
-        font-weight: 500;
-    }
+.pontuacao strong {
+    font-size: 88px;
+    color: var(--primary-text-color);
+    font-weight: 500;
+}
 
+.pontuacao p {
+    color: var(--secundary-text-color);
+    font-size: 18px;
+}
 
-    .pontuação p{
-        color: var(--secondary-text-color);
-        font-size: 18px;
-    }
-
-
-    main button {
+main button{
     padding: 16px;
     border-radius: 12px;
     border: none;
     background: var(--purple);
     color: var(--white);
     width: 100%;
+
     font-size: 18px;
     font-weight: 500;
     transition: background 0.3s;
     box-shadow: var(--shadow);
-    }
+}
 
-    main button:hover {
-        background: var(--purple-hover);
-        cursor: pointer;
-    }
-
+main button:hover {
+    background: var(--purple-hover);
+    cursor: pointer;
+}
 
 @media(min-width: 1100px) {
-    body {
+    body{
         background: var(--bg-desktop) var(--bg-color);
         background-size: cover;
         background-repeat: no-repeat;
@@ -176,75 +184,71 @@ main h2 strong {
 
     header{
         margin-block: 81px;
-        max-width: 1160;
+        max-width: 1160px;
         margin-inline: auto;
-       }
-     
-        .assunto_icone  {
-            width: 56px;
-            height: 56px;
-            padding: 8px;
-        }
-}
-   
+    }
 
-.assunto h1 {
-    font-size: 28px;
-}
+    .assunto_icone {
+        width: 56px;
+        height: 56px;
+        padding: 8px;
+    }
 
+    .assunto h1 {
+        font-size: 28px;
+    }
 
     .tema {
         gap: 16px;
     }
-    
+
     .tema img {
         width: 24px;
     }
-
 
     .tema button {
         width: 48px;
         height: 28px;
     }
-    
-    .tema button div{
+
+    .tema button div {
         width: 20px;
         height: 20px;
     }
 
-   main {
-    display: flex;
-    gap: 140px;
-    max-width: 1160px;
-    margin-inline: auto;
-   }
+    main {
+        display: flex;
+        gap: 140px;
+        max-width: 1160px;
+        margin-inline: auto;
+    }
 
+    main h2,
+    main div {
+        width: 100%;
+    }
 
-   main h2,
-   main > div {
-    width: 100%;
-   }
+    main h2 {
+        font-size: 64px;
+    }
 
-   main h2 {
-    font-size: 66px;
-   }
+    .pontuacao {
+        border-radius: 24px;
+        margin-bottom: 32px;
+    }
 
-.pontuação{
-    border-radius: 24px;
-    margin-bottom: 32px;
+    .pontuacao strong {
+        font-size: 144px;
+    }
+
+    .pontuacao p {
+        font-size: 24px;
+    }
+
+    main button{
+        font-size: 22px;
+        padding: 24px;
+        border-radius: 24px;
+    }
+
 }
-
-
-   .pontuação strong{
-    font-size: 144px;
-   }
-
-   .pontuação p{
-    font-size: 24px;
-   }
-
-   main button{
-    font-size: 22px;
-    padding: 24px;
-    border-radius: 24px;
-   }
